--- a/index.html
+++ b/index.html
@@ -2,22 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Confession Website</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Anonymous Confessions</h1>
-        <form id="confession-form">
-            <textarea id="confession" placeholder="Write your confession here..." required></textarea>
-            <button type="submit">Submit Confession</button>
-        </form>
-        <div id="confessions-list">
-            <!-- Confessions will be loaded here -->
-        </div>
-    </div>
+    <h1>Confession Board</h1>
+    <form id="confession-form">
+        <textarea id="confession-text" placeholder="Type your confession here..." required></textarea>
+        <button type="submit">Submit</button>
+    </form>
+    <div id="confession-board"></div>
     <script src="script.js"></script>
 </body>
 </html>
